--- a/config-template.yml
+++ b/config-template.yml
@@ -1,4 +1,5 @@
-# where you store your data
+# Where you store your data
+# -------------------------
 # your data must be organized this way:
 #|- /[path_to_data]
 #     |- samples.csv
@@ -15,15 +16,28 @@
 
 path_to_data: /Users/ymdt/src/dreem/test/resources/  
 
+# it's not recommanded to change this
+files_per_sample:
+  - r1.fastq
+  - r2.fastq
+  - ref.fasta
+  - library.csv
+
 # The samples that you want to process today
+# ------------------------------------------
 # These names must correspond to
 #     - the sample column in samples.csv
 #     - the name of your data folders
+#
+# Nota bene: obviously, the name of your data folders must match the sample column of samples.csv
 
 samples:
   - case_1
  # - case_2
 
+# The arguments to pass direcly to DREEM
+# --------------------------------------
+# More information about hese arguments here: https://github.com/jyesselm/dreem#run
 
 dreem_args:
     overwrite: True
@@ -32,8 +46,5 @@ dreem_args:
     add_any_info: False  # Force these filters
     bootstrap: True
 verbose: True
-files_per_sample:
-  - r1.fastq
-  - r2.fastq
-  - ref.fasta
-  - library.csv
+
+
