--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,35 @@
-click-option-group==0.5.3
+attrs==22.1.0
+biopython==1.79
+build==0.8.0
 click==8.1.3
+click-option-group==0.5.3
+colorlog==6.6.0
+cycler==0.11.0
+dreem==0.2.0
+DREEM-Herschlag==1.0.0
+dunamai==1.12.0
+fonttools==4.34.4
+future==0.18.2
+get_version==3.5.4
+iniconfig==1.1.1
+kiwisolver==1.4.4
+matplotlib==3.5.2
+numpy==1.23.1
+packaging==21.3
 pandas==1.4.3
+pep517==0.13.0
+Pillow==9.2.0
+pip-tools==6.8.0
+plotly==5.9.0
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.9
+pytest==7.1.2
+python-dateutil==2.8.2
+pytz==2022.1
+PyYAML==6.0
+scipy==1.9.0
+six==1.16.0
+tabulate==0.8.10
+tenacity==8.0.1
+tomli==2.0.1
