--- a/DREEM_Herschlag/resources/config-template.yml
+++ b/DREEM_Herschlag/resources/config-template.yml
@@ -40,12 +40,19 @@ samples:
 # More information about hese arguments here: https://github.com/jyesselm/dreem#run
 
 dreem_args:
-    overwrite: True     # Re-compute the bitvector if it already exists. Takes more time.
-    RNAstructure_path: /Users/ymdt/src/RNAstructure/exe  # where RNAstructure/exe is located on your computer. Remove if you don't want to run RNAstructure
+    overwrite: False     # Re-compute the bitvector if it already exists. Takes more time.
+   # RNAstructure_path:  # where RNAstructure/exe is located on your computer. Remove if you don't want to run RNAstructure
     temperature: False  # Use samples.csv col 'temperature_k' as an input for RNAstructure
     bootstrap: True     # Run bootstrap
 
 # Print more information during run time
 verbose: True
 
-
+# There's a bunch of folders in output/. This option creates a folder such that:
+# /mh_only
+#   |- your_sample_1
+#       |- mh.p
+#   |- your_sample_2
+#       |- mh.p
+#   ...
+mut_hist_only_folder: True
