--- a/DREEM_Herschlag/resources/library_attributes.yml
+++ b/DREEM_Herschlag/resources/library_attributes.yml
@@ -2,5 +2,5 @@ mandatory:
   - name # must be the same as in the ref_fasta
   - flank
 optional:
-  - ROI_start
-  - ROI_stop
+  - ROI_start  # 0-indexed
+  - ROI_stop   # 0-index
