--- a/requirements.in
+++ b/requirements.in
@@ -5,8 +5,7 @@ click==8.1.3
 click-option-group==0.5.3
 colorlog==6.6.0
 cycler==0.11.0
-dreem==0.2.0
-DREEM-Herschlag==1.0.0
+#dreem==0.2.0
 dunamai==1.12.0
 fonttools==4.34.4
 future==0.18.2
