pip v1.1.0 changed input file storage and naing, introduced Poisson, fixed generate_templates

--- a/DREEM_Herschlag/resources/config-template.yml
+++ b/DREEM_Herschlag/resources/config-template.yml
@@ -3,25 +3,18 @@
 # your data must be organized this way:
 #|- /[path_to_data]
 #     |- samples.csv
-#     |- /[your_sample_1]
-#          |- r1.fastq
-#          |- r2.fastq
-#          |- ref.fasta
-#          |- library.csv
-#     |- /[your_sample_2]
-#          |- ...
-#     |- /[your_sample_3]
-#          |- ...
+#     |- library.csv
+#     |- ref.fasta
+#     |- [your_sample_1]_R1_001.fastq.gz
+#     |- [your_sample_1]_R2_001.fastq.gz
+#     |- [your_sample_2]_R1_001.fastq.gz
+#     |- [your_sample_2]_R2_001.fastq.gz
+#     |- [your_sample_3]_R1_001.fastq.gz
+#     |- [your_sample_3]_R2_001.fastq.gz
 #     |- ...
 
 path_to_data: /Users/ymdt/src/DREEM_Herschlag/test/resources/  
 
-# it's not recommanded to change this
-files_per_sample:
-  - r1.fastq
-  - r2.fastq
-  - ref.fasta
-  - library.csv
 
 # The samples that you want to process today
 # ------------------------------------------
@@ -35,6 +28,7 @@ samples:
   - case_1
  # - case_2
 
+
 # The arguments to pass direcly to DREEM
 # --------------------------------------
 # More information about hese arguments here: https://github.com/jyesselm/dreem#run
@@ -43,17 +37,18 @@ dreem_args:
     overwrite: False             # Re-compute the bitvector if it already exists. Takes more time.
    # RNAstructure_path:          # where RNAstructure/exe is located on your computer. Remove if you don't want to run RNAstructure
     temperature: False           # Use samples.csv col 'temperature_k' as an input for RNAstructure
-    bootstrap_cl: 0.95           # Confidence level used for bootstrapping
-    bootstrap_n_resamples: 1000    # Number of resamples used for bootstrapping
+    poisson: True                # Add Poisson confidence interval
+
 
 # Print more information during run time
 verbose: True
 
+
 # There's a bunch of folders in output/. This option creates a folder such that:
 # /mh_only
-#   |- your_sample_1
-#       |- mh.p
-#   |- your_sample_2
-#       |- mh.p
+#   |- [your_sample_1]_mh.p
+#   |- [your_sample_2]_mh.p
+#   |- [your_sample_3]_mh.p
 #   ...
+
 mut_hist_only_folder: True
