--- a/config.yml
+++ b/config.yml
@@ -70,7 +70,7 @@ mode: add_info
 
 # USE: uncomment what you want to use
 use_with_mode_add_info:
-#- library # Don't use library.csv with add_info mode
-#- samples # Don't use samples.csv with add_info mode
-- rnastructure # Don't add RNAstructure with add_info mode
-
+#- library # Add the content of library.csv
+#- samples # Add the content of samples.csv 
+#- rnastructure # Add RNAstructure
+- poisson 
