--- a/DREEM_Herschlag/resources/sample_attributes.yml
+++ b/DREEM_Herschlag/resources/sample_attributes.yml
@@ -1,88 +1,16 @@
 mandatory:
   all:
    # General:
-    - sample # Sample name
-    - tube # Tube ID
+    - sample # Sample name - CORRESPONDING TO THE NAME OF THE FASTQ FILE
     - user # Who did the experiment
     - date # Date of the experiment
-    - library # Library/sub-library ID
-    - buffer # Buffer (composition, solubilizers if any, pH, % CO2 in incubator if used)
-    - temperature_k # Temperature en Kelvons
-    - inc_time_tot_secs # Total incubation time in seconds
-    - inc_time_react_temp_secs # Incubation time at reaction temperature in seconds
-    - strirring_mixing # Stirring/mixing conditions
-    - DMS_conc # Concentration of DMS (either input as mM or %, make it so that the other populates automatically)
-    - DMS_conc_type #  mM or %
-    - quench_cond # Quenching conditions
-    - DMS_lot # DMS lot # 
-    - DMS_date_opened # DMS date opened
-    - TGIRT_lot # TGIRT lot # 
-    - polymerase_lot # Polymerase and lot # 
-    - utr_3_or_5 # utr 3 or utr 5
     - exp_env # Experimental environment, in_vivo or in_vitro
-
-    # Library prep and sequencing:
-    - lib_prep_date # Date of library prep
-    - lib_prep_kit  # Library prep kit
-    - sequencing_date  # Date of sequencing
-    - sequencing_kit # Sequencing kit
-    - sequencing_workflow # Workflow
-    - sequencing_chemistry # Chemistry
-    - sequencing_read_length # Read length 
-    - reads_paired # True if paired end, false if single end
+    - temperature_k # Temperature en KelvIN
+    - inc_time_tot_secs # Total incubation time in seconds
+    - DMS_conc_mM # Concentration of DMS in mM
 
   in_vitro:
-    - salt_mono # Monovalent salt
-    - salt_di # Divalent salt
-    - RNA_conc # RNA concentration
-    - RNA_conc_method # Method of determination
-    - T7_lot # T7 lot # 
-    - T7_cond # T7 conditions
-    - cleanup # Purification/cleanup strategy
-    - additives # Other solution additives (PEG, cosolutes, etc.)
-    - denatur_cond # Denaturing conditions
-    - refold_cond # Refolding conditions
-    - equilibration_time_secs # Equilibration time in secs 
+    - Buffer  # Exact buffer including Mg, eg 300mM Sodium Cacodylate , 3mM Mg
 
   in_vivo:
-    - organism # Organism
     - cell_line # Cell line
-    - pass_num  # Passage number
-    - seed_density # Seeding density
-    - seed_plate_size # plate size
-    - seed_time_hours #  time since seeding in hours
-    - transfection_date # Date of transfection
-    - transfection_experimenter # Experimenter
-    - plasmid # Plasmid
-    - transfection_amount # Amount transfected
-    - transfection_reagent # Transfection reagent and lot # 
-    - transfection_confluency_est # Confluency estimate at transfection
-    - transfection_DMS_add_time_hours # Time between transfection and DMS addition in hours
-
-
-optional:
-  all:    
-    # General:
-    - temperature_method # Method of determination.
-    - RNA_date_recovery # Date of RNA recovery
-    - RNA_method # Method
-    - RNA_experimenter # Experimenter
-    - RT_date # Date of RT
-    - RT_experimenter # Experimenter
-    - PCR_date # Date of PCR
-    - PCR_date_experimenter # Experimenter 
-
-    - # Library prep and sequencing:
-    - lib_prep_experimenter # Experimenter
-    - lib_prep_lot_num  # Library prep kit lot number
-    - lib_prep_samp_indices # Sample indices
-    - sequencing_experimenter # Experimenter
-    - sequencing_quality_dist # Quality score distribution
-    - sequencing_cov_dist # Coverage distribution
-  
-  in_vitro:
-
-  in_vivo:
-    - inc_temp_k # Incubation conditions (temperature, media, %CO2)
-    - inc_media
-    - inc_co2
