--- a/config.yml
+++ b/config.yml
@@ -10,11 +10,11 @@ dreem_args:
 
 # Add info mode: add the uncommented lines to your DREEM outputs files
 # --------------------------------------------------------------------
-add_info: False    # turns this mode one 
+add_info: True    # turns this mode one 
 add_info_args:
-    library: False       # Add the content of library.csv
-    samples: False       # Add the content of samples.csv 
-    rnastructure: False   # Add RNAstructure
+    library: True       # Add the content of library.csv
+    samples: True       # Add the content of samples.csv 
+    rnastructure: True   # Add RNAstructure
     poisson: True       # Add Poisson confidence interval
 
 # RNAstructure options
@@ -25,23 +25,22 @@ rnastructure:
     max_paired_mut_rate: 0.01    # below this value, 0% of the bases are unpaired
     min_unpaired_mut_rate: 0.05  # above this value, 100% of the bases are unpaired
     dms: True                    # Add predictions using DMS
-    temperature: False            # Add predictions using temperature
-    roi: True                    # Add predictions using the ROI if there's a roi
+    temperature: True            # Add predictions using temperature
+    roi: False                    # Add predictions using the ROI if there's a roi
 
 # To JSON: export to JSON the pickle files
 # ----------------------------------------
 to_JSON: True
-path_to_json_files: /Users/ymdt/Downloads  # Path to the JSON files
+path_to_json_files: /Users/ymdt/src/dreem_nap/ex/Lauren  # Path to the JSON file
 
 # To CSV: export to CSV the pickle files
 # --------------------------------------
 to_CSV: True
-path_to_csv_files: /Users/ymdt/Downloads  # Path to the JSON files
+path_to_csv_files: /Users/ymdt/src/dreem_nap/ex/Lauren  # Path to the CSV files
 
 # Print more information during run time
 # --------------------------------------
 verbose: True
-
 
 # Where you store your data
 # -------------------------
@@ -70,7 +69,7 @@ path_to_fastq_files: /Users/ymdt/src/dreem_herschlag/test/resources
 #   |- [your_sample_3].p
 #   ...
 
-path_to_dreem_output_files: /Users/ymdt/Downloads
+path_to_dreem_output_files: /Users/ymdt/src/data/Lauren
 
 
 # Set to True if your files are under the format .p.gz
@@ -98,4 +97,9 @@ path_to_RNAstructure: /Users/ymdt/src/RNAstructure/exe
 # Nota bene: obviously, the name of your data folders must match the sample column of samples.csv
 
 samples:
-- mutation_histos
+- 470
+- 471
+- 472
+- 473
+- 474
+- 475
